--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"webpack-prod": "webpack --mode production --devtool hidden-source-map"
 	},
 	"devDependencies": {
+		"@types/leaflet": "^1.7.10",
 		"@types/plotly.js-dist-min": "^2.3.0",
 		"@types/webpack": "^5.28.0",
 		"css-loader": "^6.7.1",
@@ -22,6 +23,7 @@
 	},
 	"dependencies": {
 		"golden-layout": "^2.5.0",
+		"leaflet": "^1.8.0",
 		"plotly.js-dist-min": "^2.11.1"
 	}
 }
