--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"moduleResolution": "node",
 		"baseUrl": "./",
 		// "allowSyntheticDefaultImports": true,
-		"importsNotUsedAsValues": "error",
+		// "importsNotUsedAsValues": "error",
 		"isolatedModules": true,
 		// "noEmit": true,
 		"sourceMap": false,
